vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  type: ClusterIP
  selector:
    app: vaultwarden
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
